--- a/css/wyyx.css
+++ b/css/wyyx.css
@@ -316,6 +316,9 @@ ul , ol , li ,a{
 	margin-left: auto;
 	margin-right: auto;
 }
+.ppzzs_top_center>small,.ppzzs_top_right>a,.xpsf_top_center>small,.xpsf_top_right>a{
+	font-size: 16px;
+}
 .ppzzs_top{
 	width: 1090px;
 	box-sizing: border-box;
@@ -343,7 +346,7 @@ ul , ol , li ,a{
 }
 .ppzzs_top_right{
 	top:18px;
-	left: 650px;
+	left: 620px;
 }
 .ppzzs_top_right > a{
 	font-size: 14px;
@@ -499,11 +502,13 @@ ul , ol , li ,a{
 	left: 15px;
     z-index: 1;
 }
-.ppzzs_body>div:hover img{
-	transform: scale(1.1);
+.ppzzs_body>div img{
 	transition: all 1s;
 }
-
+.ppzzs_body>div:hover img{
+	transform: scale(1.1);
+/*	transition: all 1s;*/
+}
 .xpsf{
 	width: 1090px;
 	margin-top: 30px;
@@ -537,7 +542,7 @@ ul , ol , li ,a{
 }
 .xpsf_top_right{
 	top:18px;
-	left: 650px;
+	left: 730px;
 }
 .xpsf_top_right > a{
 	font-size: 14px;
@@ -568,6 +573,9 @@ ul , ol , li ,a{
 	width: 100%;
 	height: 100%;
 }
+.xpsf_body a:hover{
+	color: #b4a078;
+}
 .php1{
 	width: 265px;
 	height:100%;
@@ -593,7 +601,6 @@ ul , ol , li ,a{
 	width: 100%;
 	text-align: center;
 	position: absolute;
-	z-index: 2;
 	bottom: 0;
 	align-items: 80px;
 }
@@ -621,7 +628,7 @@ ul , ol , li ,a{
 	color: #d4282d;
 }
 .xpsf_bottom1_2>span:nth-child(2){
-	color: #ccc;
+	color: #b299a5;
 	text-decoration: line-through;
 }
 .php2{
@@ -631,7 +638,12 @@ ul , ol , li ,a{
 	background-size: 265px 265px;
 	position: relative;
 }
-/*.php2:hover{
+.php2>a{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+}
+.php2:hover{
 	width: 265px;
 	height:100%;
 	background: url(../images/b2.jpg) no-repeat;
@@ -643,5 +655,441 @@ ul , ol , li ,a{
 	width: 100%;
 	text-align: center;
 	position: absolute;
+	bottom: 0;
+}
+.xpsf_bottom2 a{
+	color: #000;
+	font-weight: bold;
+	font-size: 13px; 
+}
+.xpsf_bottom2 >div{
+	margin:10px auto;
+}
+.xpsf_bottom2>span{
+	color: #d4282d;
+}
+.php3{
+	width: 265px;
+	height:100%;
+	background: url(../images/c1.png) no-repeat;
+	background-size: 265px 265px;
+	position: relative;
+}
+.php3:hover{
+	width: 265px;
+	height:100%;
+	background: url(../images/c2.jpg) no-repeat;
+	background-size: 265px 265px;
+	background-color: #f4f0ea;
+}
+.php4{
+	width: 265px;
+	height:100%;
+	background: url(../images/d1.png) no-repeat;
+	background-size: 265px 265px;
+	position: relative;
+}
+.php4:hover{
+	width: 265px;
+	height:100%;
+	background: url(../images/d2.jpg) no-repeat;
+	background-size: 265px 265px;
+	background-color: #f4f0ea;
+}
+.php4>a{
+	width: 100%;
+	height: 100%;
+	position:absolute;
 	z-index: 2;
-}*/
+}
+.rqtj_bg{
+	width: 100%;
+	background-color: #f4f0ea;
+	height: 650px;
+}
+.rqtj{
+	width: 1090px;
+	margin-top: 30px;
+	margin-left: auto;
+	margin-right: auto;
+}
+.rqtj_top{
+	width: 1090px;
+	box-sizing: border-box;
+	padding-top: 30px;
+	margin-bottom: 15px;
+}
+.rqtj_top::after{
+	content: "";
+	display: block;
+	clear: both;
+}
+.rqtj_top a{
+	text-decoration: none;
+	color: #000;
+}
+.rqtj_top h3{
+	font-size: 28px;
+}
+.rqtj_top div{
+	float: left;
+	position: relative;
+}
+.rqtj_top_center{
+	top: 18px;
+	left:30px;
+}
+.rqtj_top_right{
+	top:18px;
+	left: 640px;
+}
+.rqtj_top_right > a{
+	font-size: 14px;
+}
+.rqtj_top >div a:hover{
+	color: #b4a078;
+}
+.rqtj_top_center>div{
+	margin:0 20px;
+}
+.rqtj_body{
+	width: 1090px;
+	height: 538px;
+	display: flex;
+	box-sizing: border-box;
+}
+.rqtj_body a{
+	color: #000;
+	font-weight: bold;
+}
+.rqtj_body a:hover{
+	color: #b4a078;
+}
+.rqtj_body>ul::after{
+	content: "";
+	display: block;
+	clear: both;
+}
+.rqtj_body>ul>li:first-child{
+	float: left;
+	width: 390px;
+	height: 530px;
+	background-color: #fff;
+	box-sizing: border-box;
+	border:3px solid #f4f0ea;
+	display: flex;
+	position: relative;
+}
+.rqtj_body>ul>li:first-child ~ *{
+	float: left;
+	width: 232px;
+	height: 265px;
+	background-color: #fff;
+	box-sizing: border-box;
+	border:3px solid #f4f0ea;
+	display: flex;
+	position: relative;
+}
+.rqtj_body>ul>li>div{
+	width: 100%;
+	height:100%;
+	position: relative;
+}
+.rqtj_11{
+	width: 390px;
+	height: 400px;
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.rqtj_11>img{
+	width: 317px;
+	height: 317px;
+		transition: all 1s;
+}
+.rqtj_22{
+	position: absolute;
+	text-align: center;
+	width: 100%;
+	bottom: 20px;
+	border-top: 1px solid #ccc;
+}
+.rqtj_22_1>span{
+	background-color: #f28f2d;
+	color: #fff;
+	padding: 10px auto;
+}
+.rqtj_11:hover img,.rqtj_2_1:hover img{
+	transform: scale(1.1);
+/*	transition: all 1s;*/
+}
+.rqtj_22_2{
+	margin: 10px;
+}
+.rqtj_22_2,.rqtj_2_22,.rqtj_5_22{
+	margin-top: 10px;
+	color: #dc282d;
+}
+.rqtj_2_1{
+	width: 223px;
+	height: 180px;
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
+}
+.rqtj_2_1>img{
+	width: 178px;
+	height: 178px;
+	transition: all 1s;
+}
+.rqtj_2_2{
+	position: absolute;
+	text-align: center;
+	width: 100%;
+	bottom: 20px;
+}
+.rqtj_2_21>span:first-child,.rqtj_5_21>span{
+	background-color: #f28f2d;
+	color: #fff;
+	margin-right: 10px; 
+
+}
+.rqtj_2_21>span:nth-child(2){
+	background-color: #e36844;
+	color: #fff;
+}
+.rqtj_5_22>span:nth-child(2){
+	color: #b299a5;
+	text-decoration: line-through;
+}
+.xsg{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.xsg_top{
+	padding-top: 58px;
+	padding-bottom: 20px;
+}
+.xsg_left > a,.fls-left>a{
+	float: left;
+	font-size: 28px;
+	font-weight: bold;
+	color: #000;
+}
+.xsg_right > a ,.fls-right>a{
+	float: right;
+	margin-right: 20px;
+	color: #000;
+}
+.xsg_top a:hover,.fls-top{
+	color: #b4a078;
+}
+.xsg_body{
+	width: 1090px;
+    height: 370px;
+}
+.xsg_body>ul{
+	box-sizing: border-box;
+	background-color: pink;
+}
+.xsg_body>ul>li:first-child{
+	width: 224px;
+	height: 370px;
+	border:3px solid #fff;
+	float: left;
+	box-sizing: border-box;
+	position: relative;
+	background: url(../images/c9aeb62a3f79123d793d8c49b6698b09.jpg);
+	background-size: 100% 100%;
+}
+.xsg_body>ul>li:first-child ~ *{
+	width: 433px;
+	height: 185px;
+	border:1px solid #ededed;
+	float: left;
+	box-sizing: border-box;
+}
+.xsg_body>ul>li>a{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	z-index: 1;
+}
+.xsg_body>ul>li:first-child>div{
+	text-align: center;
+}
+.xsg_body2>h2>a:hover{
+	color: #b4a078;
+}
+.dianchanng14{
+	font-size: 28px;
+	color:#615573;
+	page-break-inside: avoid;
+	position: absolute;
+	top: 70px;
+	left: 69px;
+}
+#hengxian{
+	width: 20px;
+	height: 2px;
+	background-color: #61594b;
+	position: absolute;
+	top: 125px;
+	left:100px;
+}
+.time{
+	position: absolute;
+	top: 180px;
+	left: 40px;
+}
+.time>div{
+	float: left;
+}
+.time>div:first-child,.time>div:nth-child(3),.time>div:nth-child(5){
+	width: 40px;
+	height: 40px;
+	background-color: #615548;
+	color: #fff;
+	text-align: center;
+	line-height: 40px;
+	font-size: 20px;
+}
+.time>div:nth-child(2),.time>div:nth-child(4){
+	width: 10px;
+	height: 40px;
+	color: #000;
+	font-weight: bold;
+	text-align: center;
+	line-height: 40px;
+}
+.xsg_body_left>div:nth-child(4){
+	font-size: 18px;
+	position: absolute;
+	top: 145px;
+	left: 55px;
+}
+.xsg_body_left>div:last-child{
+	width: 110px;
+	height: 30px;
+	border-radius: 15px;
+	color: #fff;
+	background-color: #a7936e;
+	position: absolute;
+	bottom: 60px;
+	left: 55px;
+	line-height: 30px;
+}
+.xsg_body1::after{
+	content: "";
+	display: block;
+	clear: both;
+}
+.xsg_body1>div:first-child{
+	float: left;
+	width: 180px;
+	height: 180px;
+	overflow: hidden;
+}
+.xsg_body1>div:fitst-child>img{
+	width: 100px;
+	height: 100px;
+}
+.xsg_body1>div:nth-child(2){
+	width: 240px;
+	height: 180px;
+	float: right;
+}
+.xsg_body1>div:nth-child(2) h2>a{
+	font-size: 16px;
+	font-weight: lighter;
+	color: #000;
+}
+.xsg_body1>div:nth-child(2) h2{
+	margin-top: 10px;
+}
+.xsg_body1>div:nth-child(2) p{
+	font-size: 14px;
+	color: #999999;
+	margin: 5px auto;
+}
+.xsg_body1_3::after{
+	content: "";
+	display: block;
+	clear: both;
+}
+.xsg_body1_3{
+	height: 20px;
+	line-height: 20px;
+	display: flex;
+	align-items: center;
+}
+.xsg_body1_3>div:first-child{
+	width:150px;
+	height:10px;
+	border-radius: 10px;
+	float: left;
+	background-color:#ffe5e5;
+	border:1px solid #fff;
+}
+.xsg_body1_3>div:nth-child(2){
+	font-size: 14px;
+	color: #999999;
+	margin-left:12px;
+	float: left;
+}
+.xsg_body1_4>span:first-child{
+	color: #be4141;
+	font-weight:lighter;
+}
+.xsg_body1_4>span:nth-child(2){
+	color: #be4141;
+	font-weight:lighter;
+	font-size: 24px;
+	font-weight: bold;
+}
+.xsg_body1_4>span:nth-child(3),.xsg_body1_4>span:nth-child(4){
+	font-size: 14px;
+	color: #999;
+}
+.xsg_body1_4>span:nth-child(4){
+	text-decoration: line-through;
+}
+.xsg_body2>a{
+	display: block;
+	width: 118px;
+	height: 31px;
+	background-color: #be4141;
+	color: #fff;
+	text-align: center;
+	line-height: 31px;
+	margin-top: 15px;
+}
+.xsg_body2>a:hover{
+	background-color: #da4f4f;
+}
+#xsg_a:hover{
+	color: #b4a078;
+}
+.xsg_img{
+transition: all 1s;
+}
+.xsg_img:hover{
+	transform: scale(1.1);
+}
+.fls{
+	width: 100%;
+	height: 526px;
+	box-sizing: border-box;
+	margin-top: 60px;
+	padding: 54px 54px 0;
+	background-color: #f4f0ea;
+	display: flex;
+	justify-content: center;
+}
+.fls-top{
+	width: 1090px;
+}
